--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/completed_reps.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/completed_reps.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <h1 class="h1reprs">Выполненные авторемонты:</h1>
+<!-- убрали маркеры списка list-style-type -->
 <ul style="list-style-type: none; padding-left: 0;">
     {% for repair in repairs %}
     <li>
