Task_20_spparts-form edit and sppart_details develop

--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/static/css/style.css
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/static/css/style.css
@@ -1130,6 +1130,7 @@ form#calc-form>label[for="id_form-0-price"] {
 /* Выбераем все select, чьи ID начинаются на 'id_form-' и заканчиваются на '-item' */
 .repair-row>select[id^="id_form-"][id$="-item"] {
     height: 27px !important;
+    width: 615px !important;
     padding: 2px 5px;
     /* - Чтобы текст не прилипал к краям при малой высоте */
     margin-top: 5px;
@@ -1520,6 +1521,9 @@ input[required] label::after {
     /* Обрезает изображение, сохраняя пропорции */
 }
 
+.wrap .alert {
+    text-align: center;
+}
 
 /* -------- Окончание формы детализации запчастей ------------- */
 /* ----------------------------------------------------------- */
