--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/base.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/techlog_tools/templates/techlog_tools/base.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="icon" type="image/png" href="{% static 'techlog_tools/car-tools.png' %}">
 </head>
+
 <body>
-<div class="menu">
-    <div class="wrap">
-        <div class="logo">
-            <a href="{% url 'home' %}">
-                <img src="{% static 'techlog_tools/car-tools.png' %}" alt="">
-            </a>
-        </div>
-        <ul>
-            {% if user.is_authenticated %}
+    <div class="menu">
+        <div class="wrap">
+            <div class="logo">
+                <a href="{% url 'home' %}">
+                    <img src="{% static 'techlog_tools/car-tools.png' %}" alt="">
+                </a>
+            </div>
+            <ul>
+                {% if user.is_authenticated %}
                 <li class="logo">Пользователь: {{ user.username }}</li>
                 <li><a href="{% url 'home' %}">Главная</a></li>
                 <li><a href="{% url 'techlogtools' %}">Инструменты</a></li>
@@ -30,22 +32,33 @@
                         <button class="exit">Выход</button>
                     </form>
                 </li>
-            {% else %}
+                {% else %}
                 <li><a href="{% url 'registruser' %}">Зарегистрироваться</a></li>
                 <li><a href="{% url 'loginuser' %}">Войти</a></li>
-            {% endif %}
-        </ul>
+                {% endif %}
+            </ul>
+        </div>
     </div>
-</div>
 
-<div class="content">
+    <div class="content">
         {% block side_bar %}
         {% endblock %}
-    <div class="wrap">
-        {% block content %}
-        {% endblock %}
+        <div class="wrap">
+            {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} js-timeout-alert">
+                {{ message }}
+                <!-- Кнопка-крестик -->
+                <button type="button" class="btn-close" data-bs-dismiss="alert" 
+                aria-label="Close">&times;</button>
+            </div>
+            {% endfor %}
+            {% endif %}
+            {% block content %}
+            {% endblock %}            
+        </div>
     </div>
-</div>
 
 </body>
+
 </html>
