--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/sppart_details.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/sppart_details.html
@@ -18,7 +18,7 @@
     <!--|safe -дляОбработки html-разметки,ЕслиОна есть  -->
     <h5>Дата внесения в базу: ---{{ sppart.date|date:'j E Y' }} г.---</h5>
     <div class="blkphoto" id="zakaz">
-        <a href="{{ sppart.url }}" target="_blank">При необходимости заказа данной запчасти, нажмите здесь</a>
+        <a href="{{ sppart.url }}" target="_blank">При необходимости заказа запчасти, нажмите здесь</a>
         <img src="{{ sppart.image.url }}" alt="">
     </div>
 </div>
