Task_21_for 14_02 diplom done

--- a/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/calc_page.html
+++ b/diplomPythonDjango/techlog_tools_spparts_auto/techlog_tools_spparts/telog_spparts/templates/telog_spparts/calc_page.html
@@ -14,7 +14,7 @@
     {% csrf_token %}
     {% for form in calc_form %}
 
-    <!-- Выводим только заглавные 1-е теги (Шапки колонок) -->
+    <!-- Выводим только заглавные 1-е теги (динамические Шапки колонок) -->
     {% if forloop.first %}
     {{ form.item.label_tag }}
     {{ form.price.label_tag }}
